--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SyntaxChronicals</title> {{!-- todo need to set up router to render title --}}
+    <title>SyntaxChronicals</title>
     <link rel="stylesheet" href="../../public/css/style.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Tech Blog</p>
+        <p>&copy; 2024 SyntaxChronicals</p>
     </footer>
 
     <script src="/js/script.js"></script>
