--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,17 +1,20 @@
 <header>
-    <h1>Welcome to the SyntaxChronicals</h1>
+    <div class="header">
+        <h1>Welcome to the {{title}}:</h1>
+        <h3>Where Code Meets Creativity</h3>
+    </div>
     {{#if user}}
-      <a href="/logout" class="logout">Logout</a>
+    <a href="/logout" class="logout">Logout</a>
     {{/if}}
-  </header>
-  <div class="container">
+</header>
+<div class="container">
     {{#each posts}}
-      <div class="post">
+    <div class="post">
         <h2>{{title}}</h2>
         <p>{{content}}</p>
-        <p>by: {{name}}</p>
-      </div>
+        <p>by: {{user}}</p>
+    </div>
     {{/each}}
-  </div>
+</div>
 
 <script src="../public/js/homepage.js"> </script>
