--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SyntaxChronicals</title>
-    <link rel="stylesheet" href="../../public/css/style.css">
+    <link rel="style" href="../../public/css/style.css">
 </head>
 
 <body>
     <header>
-        <nav>
+        <nav class="header"> 
 
             {{#if loggedIn}}
             <a href="/">Home</a>
@@ -31,7 +31,7 @@
         <p>&copy; 2024 SyntaxChronicals</p>
     </footer>
 
-    {{!-- <script src="/js/script.js"></script> --}}
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
