--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SyntaxChronicals</title>
-    <link rel="style" href="../../public/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -31,7 +31,12 @@
         <p>&copy; 2024 SyntaxChronicals</p>
     </footer>
 
-    <script src="/js/script.js"></script>
+  
+    <script src="/js/login.js"></script>
+    <script src="/js/logout.js"></script>
+    <script src="/js/signup.js"></script>
+    <script src="/js/homepage.js"></script>
+
 </body>
 
 </html>
