login not working yet

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,14 +12,13 @@
     <header>
         <nav class="header"> 
 
-            {{#if loggedIn}}
+            {{!-- {{#if loggedIn}} --}}
             <a href="/">Home</a>
             <a href="/dashboard">Dashboard</a>
             <a href="/logout">Logout</a>
-            {{else}}
+            {{!-- {{else}} --}}
             <a href="/login">Login</a>
-            <a href="/signup">Sign Up</a>
-            {{/if}}
+            {{!-- {{/if}} --}}
         </nav>
     </header>
 
@@ -32,10 +31,10 @@
     </footer>
 
   
-    <script src="/js/login.js"></script>
+   
     <script src="/js/logout.js"></script>
     <script src="/js/signup.js"></script>
-    <script src="/js/homepage.js"></script>
+    
 
 </body>
 
