--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
     <div class="col-md-6">
         <h2>Login</h2>
 
-        <form class="form login-form">
+        {{!-- <form class="form login-form" id="login-form">
             <div class="form-group">
                 <label for="email-login">email:</label>
                 <input class="form-input" type="text" id="email-login" />
@@ -16,6 +16,46 @@
             </div>
         </form>
     </div>
+</div> --}}
+<form class="form login-form" id="login-form">
+<div class="field">
+    <label class="label" for="email-login">Email:</label>
+    <div class="control">
+        <input class="input" type="text" id="email-login" placeholder="Enter your email" />
+    </div>
 </div>
-<script src="../public/js/login.js"></script>
+<div class="field">
+    <label class="label" for="password-login">Password:</label>
+    <div class="control">
+        <input class="input" type="password" id="password-login" placeholder="Enter your password" />
+    </div>
+</div>
+<div class="control">
+    <button class="button is-link" id="login-btn" type="submit">Login</button>
+</div>
+</form>
 
+<div>
+    <div class="col-md-6">
+        <h2>Signup</h2>
+
+        <form class="form signup-form">
+            <div class="form-group">
+                <label for="name-signup">name:</label>
+                <input class="form-input" type="text" id="name-signup" />
+            </div>
+            <div class="form-group">
+                <label for="email-signup">email:</label>
+                <input class="form-input" type="text" id="email-signup" />
+            </div>
+            <div class="form-group">
+                <label for="password-signup">password:</label>
+                <input class="form-input" type="password" id="password-signup" />
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary" type="submit">signup</button>
+            </div>
+        </form>
+    </div>
+</div>
+<script src="js/login.js"></script>
