--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,61 +1,41 @@
-<div class="row">
-    <div class="col-md-6">
-        <h2>Login</h2>
 
-        {{!-- <form class="form login-form" id="login-form">
-            <div class="form-group">
-                <label for="email-login">email:</label>
-                <input class="form-input" type="text" id="email-login" />
-            </div>
-            <div class="form-group">
-                <label for="password-login">password:</label>
-                <input class="form-input" type="password" id="password-login" />
-            </div>
-            <div class="form-group">
-                <button class="btn btn-primary" type="submit">login</button>
-            </div>
+ <div class="container mt-5">
+    <div class="row">
+      <!-- Login Form -->
+      <div class="col-md-6">
+        <h2 class="mb-4">Login</h2>
+        <form class="login-form" id="login-form">
+          <div class="form-group">
+            <label for="email-login">Email:</label>
+            <input class="form-control" type="email" id="email-login" placeholder="Enter your email" required>
+          </div>
+          <div class="form-group">
+            <label for="password-login">Password:</label>
+            <input class="form-control" type="password" id="password-login" placeholder="Enter your password" required>
+          </div>
+          <button class="btn btn-primary" id="login-btn" type="submit">Login</button>
         </form>
-    </div>
-</div> --}}
-<form class="form login-form" id="login-form">
-<div class="field">
-    <label class="label" for="email-login">Email:</label>
-    <div class="control">
-        <input class="input" type="text" id="email-login" placeholder="Enter your email" />
-    </div>
-</div>
-<div class="field">
-    <label class="label" for="password-login">Password:</label>
-    <div class="control">
-        <input class="input" type="password" id="password-login" placeholder="Enter your password" />
-    </div>
-</div>
-<div class="control">
-    <button class="button is-link" id="login-btn" type="submit">Login</button>
-</div>
-</form>
+      </div>
 
-<div>
-    <div class="col-md-6">
-        <h2>Signup</h2>
-
-        <form class="form signup-form">
-            <div class="form-group">
-                <label for="name-signup">name:</label>
-                <input class="form-input" type="text" id="name-signup" />
-            </div>
-            <div class="form-group">
-                <label for="email-signup">email:</label>
-                <input class="form-input" type="text" id="email-signup" />
-            </div>
-            <div class="form-group">
-                <label for="password-signup">password:</label>
-                <input class="form-input" type="password" id="password-signup" />
-            </div>
-            <div class="form-group">
-                <button class="btn btn-primary" type="submit">signup</button>
-            </div>
+      <!-- Signup Form -->
+      <div class="col-md-6">
+        <h2 class="mb-4">Signup</h2>
+        <form class="signup-form" id="signup-form">
+          <div class="form-group">
+            <label for="name-signup">Name:</label>
+            <input class="form-control" type="text" id="name-signup" placeholder="Enter your name" required>
+          </div>
+          <div class="form-group">
+            <label for="email-signup">Email:</label>
+            <input class="form-control" type="email" id="email-signup" placeholder="Enter your email" required>
+          </div>
+          <div class="form-group">
+            <label for="password-signup">Password:</label>
+            <input class="form-control" type="password" id="password-signup" placeholder="Enter your password" required>
+          </div>
+          <button class="btn btn-success" id="signup-btn" type="submit">Signup</button>
         </form>
+      </div>
     </div>
-</div>
-<script src="js/login.js"></script>
+  </div>
+  <script src="js/login.js"></script>
