--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,9 +9,9 @@
 </header>
 <div class="container">
     {{#each posts}}
-    <div class="post">
-        <h2>{{title}}</h2>
-        <p>{{content}}</p>
+    <div class="post container">
+        <h2 class="title">{{title}}</h2>
+        <p class="content">{{content}}</p>
         {{!-- <p>by: {{user}}</p>  todo this isn't working--}}
     </div>
     {{/each}}
