--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SyntaxChronicals</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <header>
-        <nav class="header"> 
+        <nav class="navbar container-fluid col-6">
 
             {{!-- {{#if loggedIn}} --}}
             <a href="/">Home</a>
             <a href="/dashboard">Dashboard</a>
-            <button id="btnLogout"><a href="/login">Logout</a></button>
+            <a id="btnLogout" href="/login">Logout</a>
             {{!-- {{else}} --}}
-            <a href="/login">Login</a>
+             <a href="/login">Login</a>
             {{!-- {{/if}} --}}
         </nav>
     </header>
@@ -26,8 +27,8 @@
     <main>
         {{{body}}}
     </main>
-<script src="/js/logout.js"></script>
-    <footer>
+    <script src="/js/logout.js"></script>
+    <footer class="text-center m-4">
         <p>&copy; 2024 SyntaxChronicals</p>
     </footer>
 
