--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,14 +6,14 @@
         <h2 class="mb-4">Login</h2>
         <form class="login-form" id="login-form">
           <div class="form-group">
-            <label for="email-login">Email:</label>
+            <label for="email-login mb-2">Email:</label>
             <input class="form-control" type="email" id="email-login" placeholder="Enter your email" required>
           </div>
           <div class="form-group">
-            <label for="password-login">Password:</label>
+            <label for="password-login mb-2 ">Password:</label>
             <input class="form-control" type="password" id="password-login" placeholder="Enter your password" required>
           </div>
-          <button class="btn btn-primary" id="login-btn" type="submit">Login</button>
+          <button class="btn btn-primary mt-4" id="login-btn" type="submit">Login</button>
         </form>
       </div>
 
@@ -33,7 +33,7 @@
             <label for="password-signup">Password:</label>
             <input class="form-control" type="password" id="password-signup" placeholder="Enter your password" required>
           </div>
-          <button class="btn btn-success" id="signup-btn" type="submit">Signup</button>
+          <button class="btn btn-success mt-4" id="signup-btn" type="submit">Signup</button>
         </form>
       </div>
     </div>
