--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -33,7 +33,7 @@
             <label for="password-signup">Password:</label>
             <input class="form-control" type="password" id="password-signup" placeholder="Enter your password" required>
           </div>
-          <button class="btn btn-success mt-4" id="signup-btn" type="submit">Signup</button>
+          <button class="btn btn-primary mt-4" id="signup-btn" type="submit">Signup</button>
         </form>
       </div>
     </div>
