working on displaying content, deleting console.logs

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,6 +11,7 @@
         <div class="post container">
             <h2 class="title">{{title}}</h2>
             <p class="content">{{content}}</p>
+            <p class="content">Writen by: {{user.name}} </p>
             {{!-- <p>by: {{user}}</p> todo this isn't working--}}
         </div>
         {{/each}}
