--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,35 @@
 <main>
     <header>
-        <nav class="navbar container-fluid col-6">
-            <a class="btn btn-default" role="button" href="/dashboard">Dashboard</a>
-            <a class="btn btn-default" role="button" id="btnLogout" href="/login">Logout</a>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                 <div class=" navbar" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="btn btn-light me-2" role="button" href="/dashboard">Dashboard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-light" role="button" id="btnLogout" href="/login">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
-    <div class="container">
-        <h1>Posts</h1>
-        {{#each posts}}
-        <div class="post container">
-            <h2 class="title">{{title}}</h2>
-            <p class="content">{{content}}</p>
-            {{!-- <p>by: {{user.name}}</p>  --}}
-        {{/each}}
+
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Posts</h1>
+        <div class="row justify-content-center">
+            {{#each posts}}
+            <div class="col-md-8 mb-4">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h2 class="card-title">{{title}}</h2>
+                        <p class="card-text m-2">{{content}}</p>
+                    </div>
+                </div>
+            </div>
+            {{/each}}
+        </div>
     </div>
 
     <script src="/js/homepage.js"></script>
