cleaning up styling

--- a/views/blogPost.handlebars
+++ b/views/blogPost.handlebars
@@ -1,29 +1,32 @@
- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                 <div class=" navbar" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="btn btn-light me-2" role="button" href="/dashboard">Dashboard</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-light" role="button" id="btnLogout" href="/login">Logout</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <div class=" navbar" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="btn btn-light me-2" role="button" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-light me-2" role="button" href="/dashboard">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-light" role="button" id="btnLogout" href="/login">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+</header>
 
-    <div class="container mt-5">
-        <h1 class="text-center mb-4">Posts</h1>
-        <div class="row justify-content-center">
-            <div class="col-md-8 mb-4">
-                <div class="card shadow-sm">
-                    <div class="card-body">
-                         <h2 class="card-title">Example title</h2> {{!-- {{title}} --}}
-                        <p class="card-text m-2">Example content</p>{{!--   {{content}} --}}
-                    </div>
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Post</h1>
+    <div class="row justify-content-center">
+        <div class="col-md-8 mb-4">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <h2 class="card-title">Example title</h2> {{!-- {{title}} --}}
+                    <p class="card-text m-2">Example content</p>{{!-- {{content}} --}}
                 </div>
             </div>
         </div>
     </div>
+</div>
