--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,4 @@
-<main>
-    <header>
+<main class="container mt-5">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                  <div class=" navbar" id="navbarNav">
@@ -14,25 +13,26 @@
                 </div>
             </div>
         </nav>
-    </header>
 
-    <div class="container mt-5">
+    {{!-- <div class="container mt-5"> --}}
         <h1 class="text-center mb-4">Posts</h1>
         <div class="row justify-content-center">
             {{#each posts}}
-            <a href="/BlogPost">
+            
             <div class="col-md-8 mb-4">
                 <div class="card shadow-sm">
                     <div class="card-body">
                         <h2 class="card-title">{{title}}</h2>
                         <p class="card-text m-2">{{content}}</p>
-                    </div>
+                     <a class="m-2" href="/BlogPost">more details</a>
+                     </div>
                 </div>
+               
             </div>
-            </a>
+            
             {{/each}}
         </div>
-    </div>
+    {{!-- </div> --}}
 
     <script src="/js/homepage.js"></script>
     <script src="/js/logout.js"></script>
