--- a/views/blogPost.handlebars
+++ b/views/blogPost.handlebars
@@ -19,6 +19,9 @@
 
 <div class="container mt-5">
     <h1 class="text-center mb-4">Post</h1>
+    <p>Feature coming soon </p>
+    {{#if user.post.length}}
+    {{#each user.posts}}
     <div class="row justify-content-center">
         <div class="col-md-8 mb-4">
             <div class="card shadow-sm">
@@ -29,4 +32,8 @@
             </div>
         </div>
     </div>
+    {{/each}}
+    {{else}}
+    <p>No post available</p>
+    {{/if}}
 </div>
